Fix footer bottom spacing issue
- body min-height를 100vh로 변경
- Footer에 강제 margin/padding 0 설정
- max-height 150px 추가로 높이 완전 고정
- Footer 하단 여백 완전 제거
- Sticky footer가 정확히 화면 하단에 위치

--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -10,15 +10,16 @@
   float: left;
   margin-left: 0;
   margin-right: 0;
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0 !important;
+  padding: 0 !important;
   width: 100%;
   clear: both;
 
   /* Sticky footer positioning */
   position: relative;
-  height: 150px;
-  min-height: 150px;
+  height: 150px !important;
+  min-height: 150px !important;
+  max-height: 150px !important;
   /* End sticky footer */
 
   -webkit-animation: intro 0.3s both;
